--- a/roles/postgresql/tasks/includes/initialize.yml
+++ b/roles/postgresql/tasks/includes/initialize.yml
@@ -3,8 +3,10 @@
   stat:
     path: "{{ postgresql.directories.datadir }}"
   register: postgresql_directory_data
+  become: true
 
 - name: VÉRIFICATION DE L'INITIALISATION DU CLUSTER PostgreSQL
   stat:
     path: "{{ postgresql.directories.log }}"
   register: postgresql_directory_log
+  become: true
