--- a/roles/postgresql/tasks/includes/pgtune.yml
+++ b/roles/postgresql/tasks/includes/pgtune.yml
@@ -43,9 +43,4 @@
     - regexp: "#max_parallel_maintenance_workers = 2"
       line: "max_parallel_maintenance_workers = 2"
   become: true
-
-- name: "REDÉMARRAGE DE PostgreSQL"
-  service:
-    name: postgresql
-    state: restarted
-  become: true
+  notify: restart postgresql
