--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -3,35 +3,44 @@
   include_vars: defaults/main-Debian.yml
   when: ansible_os_family == 'Debian'
 
-- include_tasks: setup-Debian.yml
-  when: ansible_os_family == 'Debian'
-
-- include_tasks: setup-RedHat.yml
+- name: CHARGEMENT DES VARIABLES PAR DÉFAUT
+  include_vars: defaults/main-RedHat.yml
   when: ansible_os_family == 'RedHat'
 
-# - name: UTILISATEUR postgres
-#   include_tasks: includes/user.yml
+- name: UTILISATEUR postgres
+  include_tasks: includes/user.yml
 
-# - name: INSTALLATION DE PostgreSQL
-#   include_tasks: includes/setup.yml
+- name: INSTALLATION DE PostgreSQL SUR UNE BASE Debian
+  include_tasks: includes/setup-Debian.yml
+  when: ansible_os_family == 'Debian'
 
-# - name: INITIALISATION DE PostgreSQL
-#   include_tasks: includes/initialize.yml
+- name: INSTALLATION DE PostgreSQL SUR UNE BASE RedHat
+  include_tasks: includes/setup-RedHat.yml
+  when: ansible_os_family == 'RedHat'
 
-# - name: CONFIGURATION DE PostgreSQL
-#   include_tasks: includes/configure.yml
+- name: INITIALISATION DE PostgreSQL
+  include_tasks: includes/initialize.yml
 
-# - name: RÔLE(S) DE PostgreSQL
-#   include_tasks: includes/roles.yml
+- name: CONFIGURATION DE PostgreSQL
+  include_tasks: includes/configure.yml
 
-# - name: CRÉATION DES MODÈLES DE BASES DE DONNÉES PostgreSQL
-#   include_tasks: includes/templates.yml
+- name: RÔLE(S) DE PostgreSQL
+  include_tasks: includes/roles.yml
 
-# - name: AJOUT DES EXTENSIONS PostgreSQL
-#   include_tasks: includes/extensions.yml
+- name: CRÉATION DES MODÈLES DE BASES DE DONNÉES PostgreSQL
+  include_tasks: includes/templates.yml
 
-# - name: CRÉATION DES BASES DE DONNÉES PostgreSQL
-#   include_tasks: includes/databases.yml
+- name: AJOUT DES EXTENSIONS PostgreSQL
+  include_tasks: includes/extensions.yml
+
+- name: CRÉATION DES BASES DE DONNÉES PostgreSQL
+  include_tasks: includes/databases.yml
 
 # - name: PGTune PostgreSQL
 #   include_tasks: includes/pgtune.yml
+
+# - name: REDÉMARRAGE DU SERVICE postgresql
+#   ansible.builtin.systemd_service:
+#     name: "{{ postgresql.daemon }}"
+#     state: started
+#   become: true
