--- a/requirements.yml
+++ b/requirements.yml
@@ -5,6 +5,5 @@ roles:
 
 collections:
   - name: community.general 
-    version: 8.6.0
   - name: community.postgresql
-    version: 3.4.0
+  # - name: ansible.posix
