UPDATE WITH RHEL BASE

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,5 +1,5 @@
 [pve]
-192.168.10.5 ansible_ssh_user="{{ secret.user.pve.ssh.user }}" ansible_ssh_pass="{{ secret.user.pve.ssh.password }}"
+localhost ansible_ssh_user="{{ secret.user.pve.ssh.user }}" ansible_ssh_pass="{{ secret.user.pve.ssh.password }}" ansible_ssh_port=8022
 
 [geo]
-10.10.22.103
+10.0.2.100
