--- a/roles/deployment/tasks/deployment.yml
+++ b/roles/deployment/tasks/deployment.yml
@@ -4,7 +4,7 @@
 
 - name: CRÉATION DU CONTENEUR LXC
   proxmox:
-    proxmox_default_behavior: no_defaults
+    # proxmox_default_behavior: no_defaults
     node: "{{ proxmox.pve.api.node }}"
     api_host: "{{ proxmox.pve.api.host }}"
     api_user: "{{ proxmox.pve.api.user }}"
@@ -32,10 +32,9 @@
     ostemplate: "{{ proxmox.lxc.ostemplate | default ('{{ proxmox.lxc.storage_template }}:vztmpl/debian-12-standard_12.7-1_amd64.tar.zst') }}"
     password: "{{ secret.user.lxc.ssh.password }}"
     pubkey: "{{ secret.user.me.ssh.pubkey }}"
-    storage: "{{ proxmox.lxc.disk_volume.storage | default ('local-lvm') }}"
     swap: "{{ proxmox.lxc.swap | default ('512') }}"
     tags: "{{ proxmox.lxc.tags }}"
-    # timezone: "{{ proxmox.lxc.timezone }}"
+    timezone: "{{ proxmox.lxc.timezone }}"
     unprivileged: "{{ proxmox.lxc.unprivileged | default ('true') }}"
     state: present
   delegate_to: "{{ proxmox.pve.api.host }}"
