--- a/roles/deployment/tasks/main.yml
+++ b/roles/deployment/tasks/main.yml
@@ -13,13 +13,13 @@
 - name: TÉLÉCHARGEMENT DES MODÈLES DE CONTENEUR LXC
   command: pveam download {{ proxmox.lxc.storage_template }} {{ item }}
   loop:
-    - debian-11-standard_11.7-1_amd64.tar.zst
     - debian-12-standard_12.7-1_amd64.tar.zst
+    - rockylinux-9-default_20240912_amd64.tar.xz
   delegate_to: "{{ proxmox.pve.api.host }}"
 
 # Infrastructure
-- name: DÉPLOIEMENT DU CONTENEUR LXC elephant
-  include_tasks: deployment.yml
+# - name: DÉPLOIEMENT DU CONTENEUR LXC
+#   include_tasks: deployment.yml
 
 # Amorçage des conteneurs (SSH)
 - name: AMORÇAGE DU CONTENEUR LXC elephant
