--- a/roles/geo/tasks/main.yml
+++ b/roles/geo/tasks/main.yml
@@ -23,33 +23,33 @@
     group: "{{ secret.user.geo.group }}"
     mode: 0755
   with_items:
-    - "{{ geo.version }}/geo-installer-2.8.0-linux-lts.jar"
+    - "{{ geo.version }}/geo-installer-3.1.1-linux.jar"
     - "{{ geo.version }}/auto-install-geo.xml"
-    - "{{ geo.version }}/geo-intervention-plugin-2.8.0.GEO_2_6.jar"
+    - "{{ geo.version }}/geo-intervention-plugin-3.0.1.GEO_3_0+.jar"
     # - "{{ geo.version }}/auto-install-geo-intervention.xml"
-    - "{{ geo.version }}/geocadastre-installer-5.25.2.GEO_2_6+.jar"
+    - "{{ geo.version }}/geocadastre-installer-6.0.2.GEO_3_0+.jar"
     - "{{ geo.version }}/auto-install-geo-cadastre.xml"
-    - "{{ geo.version }}/solutions-backoffice-installer-2.7.4.GEO_2_6+.jar"
+    - "{{ geo.version }}/solutions-backoffice-installer-2.8.0.GEO_3_0+.jar"
     - "{{ geo.version }}/auto-install-solutions-backoffice.xml"
-    - "{{ geo.version }}/plugin-solutions-backoffice-2.7.4.GEO_2_6+.jar"
+    - "{{ geo.version }}/plugin-solutions-backoffice-2.8.0.GEO_3_0+.jar"
   become: true
 
 - name: INSTALLATION DE LA PLATEFORME GEO
-  ansible.builtin.shell: java -jar geo-installer-{{ geo.version }}-linux-lts.jar auto-install-geo.xml
+  ansible.builtin.shell: java -jar geo-installer-{{ geo.version }}-linux.jar auto-install-geo.xml
   args:
     chdir: "/home/{{ secret.user.geo.name }}/downloads/{{ geo.version }}"
   become_user: "{{ secret.user.geo.name }}"
   become: true
 
 - name: INSTALLATION DE LA PLATEFORME GEO - BACKOFFICE
-  ansible.builtin.shell: java -jar solutions-backoffice-installer-2.7.4.GEO_2_6+.jar auto-install-geo.xml
+  ansible.builtin.shell: java -jar solutions-backoffice-installer-2.8.0.GEO_3_0+.jar auto-install-geo.xml
   args:
     chdir: "/home/{{ secret.user.geo.name }}/downloads/{{ geo.version }}"
   become_user: "{{ secret.user.geo.name }}"
   become: true
 
 - name: INSTALLATION DE LA PLATEFORME GEO - CADASTRE
-  ansible.builtin.shell: java -jar geocadastre-installer-5.25.2.GEO_2_6+.jar auto-install-geo-cadastre.xml
+  ansible.builtin.shell: java -jar geocadastre-installer-6.0.2.GEO_3_0+.jar auto-install-geo-cadastre.xml
   args:
     chdir: "/home/{{ secret.user.geo.name }}/downloads/{{ geo.version }}"
   become_user: "{{ secret.user.geo.name }}"
